# adilytics

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROPOSAL.md  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  documentation_options.js  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.database.html  src.html  src.models.html  src.routes.html  src.services.html  src.utils.html  tests.html
docs/_sources/: index.rst.txt  modules.rst.txt  src.rst.txt  tests.rst.txt
docs/source/: conf.py  index.rst  src.models.rst
locust_scripts/: ad_creation.py  product_creation.py  user_simulation.py
src/: config.py  main.py  models.py
src/database/: __init__.py  init_db.py
src/models/: ad_model.py  click_model.py  company_model.py  location_model.py  product_model.py  user_model.py
src/routes/: ad_route.py  click_route.py  company_route.py  health_route.py  index_route.py  location_route.py  product_route.py  user_route.py
src/services/: ad_service.py  click_service.py  company_service.py  health_service.py  index_service.py  location_service.py  product_service.py  user_service.py
src/utils/: ad_const.py  database_const.py  time_utils.py
static/: README.md  index2.html  starter.html
templates/: index2.html
tests/: test_user.py
tests/test_ad/: test_ad_api.py  test_ad_service.py
tests/test_click/: test_click_api.py  test_click_service.py
tests/test_index/: test_index_api.py  test_index_service.py
tests/unit/: test_calculator.py
(+25 files in other folders)
